<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/AppMargins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/employee_lname">
        </TextView>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/employee_fname">
        </TextView>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/employee_age">
        </TextView>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_employee_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>